# basic-web

./: Cargo.toml  Dockerfile  build.bash
.github/workflows/: ci.yaml
src/: main.rs
