[package]
name = "basic-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.17", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-prometheus = "0.10.0"
prometheus = "0.13.1"
